--- a/hello-world/pom.xml
+++ b/hello-world/pom.xml
@@ -1,16 +1,20 @@
 <project>
-	<modelVersion>4.0.0</modelVersion>
 	<!--
 	TODO: Provide the project coordinates. The group ID should beginpage
 	'edu.depaul.cdm.se441', the artifact ID should be 'hello-world' and
 	the version should be '1.0-SNAPSHOT. The packaging for this artifact
 	should be 'jar'.
 	-->
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>edu.depaul.cdm.se441</groupId>
+	<artifactId>hello-world</artifactId>
+	<version>1.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>SE441 Hello World</name>
 	
     <properties>
-	  <maven.compiler.source>17</maven.compiler.source>
-	  <maven.compiler.target>17</maven.compiler.target>
+	  <maven.compiler.source>16</maven.compiler.source>
+	  <maven.compiler.target>16</maven.compiler.target>
 	</properties>
 
 	<!--
@@ -21,7 +25,25 @@
 	junit v.4.12   (for testing only)
 	-->
 	
-    <build>
+	<dependencies>
+
+		<dependency>
+		  <groupId>log4j</groupId>
+		  <artifactId>log4j</artifactId>
+		  <version>1.2.17</version>
+		  <scope>compile</scope>
+		</dependency>
+
+		<dependency>
+		  <groupId>junit</groupId>
+		  <artifactId>junit</artifactId>
+		  <version>4.12</version>
+		  <scope>test</scope>
+		</dependency>
+
+	</dependencies>
+    
+	<build>
 	  <plugins>
 		<plugin>
 		  <groupId>org.apache.maven.plugins</groupId>
